# Egret

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  plan.md
.claude/: settings.json
.claude/skills/update-design/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/update-plan/: SKILL.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  ecs-cli-comparison.md  requirements.md  security-assessment.md
docs/blog/: roadmap-complete-user-experience.md
docs/design/: auto-image-pull.md  cloudformation-input.md  container.md  docker.md  orchestrator-phase1.md  phase11-exec-envfiles.md  phase12-service-mode.md  phase13-cfn-yaml-network-mode.md  phase2-overrides-secrets.md  phase3-metadata-credentials.md  phase4-dependson-healthcheck.md  phase5-volume-logs-ux.md  phase6-validation-init-dryrun.md  phase7-observability-diagnostics.md  phase8-profile.md  phase8-workflow-acceleration.md  security-csprng-container-name-validation.md  security-fix-credential-auth-path-traversal.md  security-review-2026-04.md  service-gap-analysis.md  taskdef.md  terraform-input.md
examples/: README.md  run-smoke-test.sh
examples/level3/: multi-container.json  sidecar.json  single-container.json
examples/multi-container/: egret-override.json  secrets.local.json  task-definition.json
examples/sidecar/: egret-override.json  task-definition.json
examples/test-image/: build.sh
proptest-regressions/taskdef/: mod.txt
src/: labels.rs  main.rs
src/cli/: completions.rs  diff.rs  exec.rs  format.rs  history.rs  init.rs  inspect.rs  logs.rs  mod.rs  ps.rs  run.rs  stats.rs  stop.rs  task_lifecycle.rs  validate.rs  version.rs  watch.rs
src/container/: mod.rs
src/credentials/: mod.rs
src/docker/: mod.rs
src/events/: mod.rs
src/history/: mod.rs
src/metadata/: mod.rs
src/orchestrator/: mod.rs
src/overrides/: mod.rs
src/profile/: mod.rs
src/secrets/: mod.rs
src/taskdef/: cloudformation.rs  diagnostics.rs  mod.rs  terraform.rs
tests/fixtures/: cfn-template.json  egret-override.json  secrets.local.json  simple-task.json  task-with-secrets.json
