[package]
name = "egret"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
description = "Local ECS task runner - run ECS task definitions locally"
license = "Apache-2.0"
repository = "https://github.com/watany-dev/Egret"
readme = "README.md"
keywords = ["ecs", "docker", "container", "aws", "local"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal", "time", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
bollard = "0.18"
futures-util = "0.3"
aws-config = "1"
aws-credential-types = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = { version = "0.3", features = ["std"] }
clap_complete = "4"
toml = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
